# claw-guard

./: .gitignore  Cargo.toml  Plan.md  README.md  README.zh-CN.md
.claude/skills/: release.md
.github/workflows/: release.yml
assets/: icon.icns
docs/: macos-release.md
examples/skills/: check-git-secrets.md  check-npm-audit.md  check-open-ports.md
macos/: Info.plist  entitlements.plist
scripts/: bundle-macos.sh
skills/: claw-guard-skill.md
src/: gui.rs  i18n.rs  main.rs  platform.rs
src/engine/: mod.rs  registry.rs
src/engine/skill/: mod.rs  parser.rs  runner.rs
src/llm/: adapter.rs  local.rs  mod.rs  prompt.rs  providers.rs  remote.rs
src/report/: mod.rs
src/rules/: mod.rs
src/rules/cost/: cg_m001.rs  cg_m002.rs  cg_m003.rs  mod.rs
src/rules/credential/: cg_c001.rs  cg_c002.rs  cg_c003.rs  mod.rs
src/rules/dataleak/: cg_d001.rs  cg_d002.rs  cg_d003.rs  mod.rs
src/rules/destructive/: cg_x001.rs  cg_x002.rs  cg_x003.rs  cg_x004.rs  mod.rs
src/rules/docker/: cg_t001.rs  mod.rs
src/rules/filesystem/: cg_f001.rs  cg_f002.rs  cg_f003.rs  mod.rs
src/rules/gateway/: cg_g001.rs  cg_g002.rs  cg_g003.rs  cg_g004.rs  mod.rs
src/rules/network/: cg_n001.rs  cg_n002.rs  cg_n003.rs  cg_n004.rs  cg_n005.rs  mod.rs
src/rules/plugin/: cg_k001.rs  cg_k002.rs  mod.rs
src/rules/process/: cg_p001.rs  cg_p002.rs  cg_p003.rs  cg_p004.rs  cg_p005.rs  mod.rs
src/rules/sandbox/: cg_s001.rs  cg_s002.rs  mod.rs
