[package]
name = "claw-guard"
version = "0.6.0"
edition = "2021"
description = "AI Agent host system security audit tool"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.33"
gethostname = "1.0"
semver = "1.0.27"
eframe = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "process", "net"] }
